@@ -4,6 +4,9 @@ version 0.9.6 -- unreleased
 	 . Allow the entire backup run to be halted by an action, thanks to
 	   Matthew Palmer (Closes: #455836)
 	 . Fixed tr construct reporting a warning (Closes: #452669)
+    lib changes
+	vserver:
+	 . added vservers_running function
     handler changes
 	dup:
 	 . General cleanup
@@ -15,7 +18,8 @@ version 0.9.6 -- unreleased
 	   new syntax.
 	 . Support every duplicity-supported transport with new configuration
 	   option desturl (Closes: #483712, #346040, Trac#2).
-	 . Actually allow to backup only VServers, by relaxing $include test.
+	 .
+	Actually allow to backup only VServers, by relaxing $include test.
 	ldap:
 	 . support HDB backend just as the BDB one, and make message clearer
 	   when no supported backend is found (Closes: #476910)
@@ -34,6 +38,7 @@ version 0.9.6 -- unreleased
 	sys:
 	 . update for 2.6 kernels: use /proc/kallsyms instead of /proc/ksyms
 	   (Closes: Trac#39)
+	 . use new vservers_running function from lib/vserver
 
 version 0.9.5 -- December 2, 2007
     backupninja changes
